--- a/noss.historia.html
+++ b/noss.historia.html
@@ -15,7 +15,7 @@
     </center>
 <hr>
 <center>
-<p class="tyg">A Pluto foi criada em 1962 pela Nasa para a corrida espacial. Inicialmente, a Pluto era destinada à área da exploração espacial, mas com o passar do tempo ela foi sendo esquecida pela Nasa. No final dos anos 200 a pluto estava completamnte abandonada mas em 2010 ela foi comprada pela spaceX. Mais ao decorrer do tempo ela foi ganhando altonomia e com o passar dos anos a pluto se tornou oque é hoje em dia </p>
+<p class="tyg">A Pluto foi criada em 1962 pela Nasa para a corrida espacial. Inicialmente, a Pluto era destinada à área da exploração espacial, mas com o passar do tempo ela foi sendo esquecida pela Nasa. No final dos anos 2000 a pluto estava completamente abandonada, mas em 2010 ela foi comprada pela spaceX. Mas ao decorrer do tempo ela foi ganhando autonomia e com o passar dos anos a pluto se tornou o que é hoje em dia </p>
 </center>
 
 <hr>
