--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <header>
     <center>
-        <h1>P.l.u.t.o - vendas de robôs </h1>
+        <h1>P.l.u.t.o - Vendas de Robôs </h1>
         <nav>
             <ul>
                 <li><a href="contato.html">CONTATO</a></li>
